- Fixed styling error that caused cover list item titles to overflow on   mobile

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ input:focus {
 .list-cover-item > div
 {
 	padding-top: 5px;
-	max-width: 100%;
+	max-width: -webkit-calc(100% - 85px);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
